--- a/sample_config.env
+++ b/sample_config.env
@@ -1,12 +1,12 @@
 # Fill your config
-API_HASH = ""
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-OWNER = ""
-OWNER_USERNAME = ""
-PASSWORD = ""
-DATABASE_URL = ""
-LOGCHANNEL = ""   # Add channel id as: "-100 + Actual_ID"
+API_HASH = "dd19a00b085a219421a3717d0ae9c0d0"
+BOT_TOKEN = "5780858547:AAFfgaHrRSQZPl9UcZWtWZtGp6qis08Woko"
+TELEGRAM_API = "5948230"
+OWNER = "1237712948"
+OWNER_USERNAME = "koko"
+PASSWORD = "1234"
+DATABASE_URL = ""mongodb+srv://Partha:eGRHgSRgwOazmMoG@cluster0.spmiqzy.mongodb.net/?retryWrites=true&w=majority"
+LOGCHANNEL = "-1001610166758"   # Add channel id as: "-100 + Actual_ID"
 USER_SESSION_STRING = "" # Premium account session string to upload upto 4GB (requires "LOGCHANNEL")
 
 # tired of redeploying :(
