--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ TELEGRAM_API = "5948230"
 OWNER = "1237712948"
 OWNER_USERNAME = "koko"
 PASSWORD = "1234"
-DATABASE_URL = "mongodb+srv://Partha:eGRHgSRgwOazmMoG@cluster0.spmiqzy.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://mrgbot:mrgbot1@cluster0.3els5jr.mongodb.net/?retryWrites=true&w=majority"
 LOGCHANNEL = "-1001610166758"   # Add channel id as: "-100 + Actual_ID"
 USER_SESSION_STRING = "" # Premium account session string to upload upto 4GB (requires "LOGCHANNEL")
 
